[metadata]
name = guessinggame
version = 0.0.1
author = Natalie Harris
author_email = nharri29@ksu.edu
description = A fun guessing game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KSU-CC-410-Spring-2024/11-releases-python-nnatalieh
    Bug Tracker = https://github.com/KSU-CC-410-Spring-2024/11-releases-python-nnatalieh/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: <MIT License>
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include-package-data = True

[options.package_data]
guessinggame = py.typed